1.0.0.73-alpha
-Fixed bug with toggling on or off sweatbot by chat command
-Added bonus for following
-Added bonus for subscribing
-Switched ui to dark mode
-Added connection status indicator
-Added toggle for !bitcost command
-Added economy tracking to quickly see how many bits are available for user. Updates every 15 seconds
-Fixed crash when connecting and disconnecting quickly

1.0.0.72-alpha
-Removed old command system in favor of the command builder. Maintaining and changing any of it was a pain
-Updated debug system
-Fixed crash caused if the custom command json was missing
-Fixed "Disable confirmation message" toggle not saving after restart
-Adjusted menu names and layouts
-Added save button to Auto Message
-Added toggle in settings to hide Trader Menu
-Adjusted scripting language syntax and how to use file
-Added MPosAsync
-Added quick commands under the Command Builder menu
-Removed goose folder. Planning on adding a way to launch exe files

1.0.0.71-alpha
-Added toggle to print out remaining bits after using a command
-Added Async Delay
-Bugfixing for Custom commands

1.0.0.70-alpha
-Added HitKeyLoop
-Added HitKeyLoopAsync
-Added MuteVolumeAsync
-Added LeftClickLoop
-Added LeftClickLoopAsync
-Added RightClickLoop
-Added RightClickLoopAsync
-Added MousePos
-Fixed debug spelling errors
-Updated interface to support new functions
-Adjusted disabled and enabled command list to only show what item you have selected
-Fixed command field not showing selected disabled command
-Added write debug to settings menu. Used to Log anything that shows up in the console to a debug file in the Logs folder
-Added a way to find the mouse position of wherever the mouse is. Under the command builder menu, Select the box with "X: 0, Y: 0" then move the mouse to wherever you want it and hit shift. Then if you use the "Move Mouse to Position" button it will automatically add the position in
-Removed dropkit as its easier to do with Custom Commands