@@ -109,6 +109,9 @@
             <setting name="isEconomyOn" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="isSendKeyEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
         </UiBot.Properties.Settings>
     </userSettings>
 </configuration>
