@@ -7,6 +7,7 @@
 -Added toggle for !bitcost command
 -Added economy tracking to quickly see how many bits are available for user. Updates every 15 seconds
 -Fixed crash when connecting and disconnecting quickly
+-Added !sendkey. Chat can now send individual keypresses. Set the cost and how long for it to hold the button in Command Menu. Example "!sendkey A" will press the button A 
 
 1.0.0.72-alpha
 -Removed old command system in favor of the command builder. Maintaining and changing any of it was a pain
